# busyrotate

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  Makefile  README.md  busyrotate.cpp  dirdiff.cpp  inotify_fd.hpp  log_pattern.hpp  rotateutils.cpp  rotateutils.hpp
test/: log_pattern.cpp  test.sh
